--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,105 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.fadingBackgrounds {
+  position: relative;
+  top: 0;
+  left: 0;
+  margin: auto;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.fadingBackgrounds img {
+  position: absolute;
+  left: 0;
+  top: 0;
+  -webkit-animation-name: fade;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-duration: 40s;
+  animation-name: fade;
+  animation-iteration-count: infinite;
+  animation-duration: 40s;
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
+}
+
+@keyframes fade {
+  0% {
+    opacity: 1;
+    filter:opacity(100%);
+  }
+  12.5% {
+    opacity: 0;
+    filter:opacity(0%);
+  }
+  25% {
+    opacity: 0;
+    filter:opacity(0%);
+  }
+  37.5% {
+    opacity: 0;
+    filter:opacity(0%);
+  }
+  50% {
+    opacity: 0;
+    filter:opacity(0%);
+  }
+  62.5% {
+    opacity: 0;
+    filter:opacity(0%);
+  }
+  75% {
+    opacity: 0;
+    filter:opacity(0%);
+  }
+  87.5% {
+    opacity: 0;
+    filter:opacity(0%);
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.f1 {
+  -webkit-animation-delay: -35s;
+  animation-delay: -35s;
+  -webkit-animation-name: fade;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-duration: 40s; /* total duration of the animating background */
+  animation-name: fade;
+  animation-iteration-count: infinite;
+  animation-duration: 40s; /* total duration of the animating background */
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
-.App-link {
-  color: #61dafb;
+.f2 {
+  -webkit-animation-delay: -30s;
+  animation-delay: -30s;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.f3 {
+  -webkit-animation-delay: -25s;
+  animation-delay: -25s;
+}
+.f4 {
+  -webkit-animation-delay: -20s;
+  animation-delay: -20s;
+}
+.f5 {
+  -webkit-animation-delay: -15s;
+  animation-delay: -15s;
+}
+.f6 {
+  -webkit-animation-delay: -10s;
+  animation-delay: -10s;
+}
+.f7 {
+  -webkit-animation-delay: -5s;
+  animation-delay: -5s;
+}
+.f8 {
+  -webkit-animation-delay: 0s;
+  animation-delay: 0s;
 }
