--- a/src/App.css
+++ b/src/App.css
@@ -146,7 +146,7 @@
   right: 0;
   width: 300px;
   height: 150px;
-  top: 50px;
+  top: 7%;
   margin: auto;
   animation-name: appearPartial;
   animation-duration: 1s;
@@ -157,15 +157,101 @@
   opacity: 0.5;
   z-index: 1;
   position: fixed;
-  left: 0;
-  right: 0;
-  width: 60%;
-  top: 300px;
+  left: 0%;
+  right: 0%;
+  top: 30%;
   color: white;
-  border: 2px solid red;
-  background: rgba(0, 0, 0, 0.8);
   margin: auto;
   animation-name: appearPartial;
   animation-duration: 1s;
   animation-fill-mode: forwards;
+}
+
+.homeNav {
+  text-align: center;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  justify-content: center;
+  font-size: 19pt;
+}
+
+.homeNavMobile {
+  text-align: center;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  justify-content: center;
+  font-size: 13pt;
+}
+
+.introText {
+  margin-left: 20%;
+  margin-right: 20%;
+  margin-top: 6%;
+  background-color: rgba(0,0,0, 0.1);
+}
+
+span {
+  margin-left: 4%;
+  margin-right: 4%;
+  margin-top: 15px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  letter-spacing: 1px;
+  font-family: Cambria;
+}
+
+#musicLink {
+  box-shadow: inset 0 0 0 0 #024112;
+-webkit-transition: all ease 0.8s;
+-moz-transition: all ease 0.8s;
+transition: all ease 0.8s;
+}
+
+#musicLink:hover {
+  text-decoration: underline;
+  box-shadow: inset 100px 0 0 0 #c6eee5;
+  color: rgb(0, 0, 0);
+  cursor: pointer;
+}
+
+#blogLink {
+  box-shadow: inset 0 0 0 0 #0770e9;
+-webkit-transition: all ease 0.8s;
+-moz-transition: all ease 0.8s;
+transition: all ease 0.8s;
+}
+
+#blogLink:hover {
+  text-decoration: underline;
+  box-shadow: inset 100px 0 0 0 #a7a8ee;
+  color: rgb(0, 0, 0);
+  cursor: pointer;
+}
+
+#aboutLink {
+  box-shadow: inset 0 0 0 0 #a76502;
+-webkit-transition: all ease 0.8s;
+-moz-transition: all ease 0.8s;
+transition: all ease 0.8s;
+}
+
+#aboutLink:hover {
+  text-decoration: underline;
+  box-shadow: inset 100px 0 0 0 #dbc19b;
+  color: rgb(0, 0, 0);
+  cursor: pointer;
+}
+
+#socialsLink {
+  box-shadow: inset 0 0 0 0 #410205;
+  -webkit-transition: all ease 0.8s;
+  -moz-transition: all ease 0.8s;
+  transition: all ease 0.8s;
+}
+
+#socialsLink:hover {
+  text-decoration: underline;
+  box-shadow: inset 100px 0 0 0 #db9ba0;
+  color: rgb(0, 0, 0);
+  cursor: pointer;
 }
