--- a/src/App.css
+++ b/src/App.css
@@ -153,6 +153,17 @@
   animation-fill-mode: forwards;
 }
 
+.musicPage {
+  background: url("./images/pic2.jpg");
+  background-size: cover;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  min-height: 100%;
+}
+
 .homePanel {
   opacity: 0.5;
   z-index: 1;
