--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,3 +1,7 @@
+nav {
+    margin-top: 1%;
+}
+
 .appear {
     animation-name: appear;
     animation-duration: 1s;
@@ -6,10 +10,9 @@
 
 #brandTopLeft {
     z-index: 1;
-    display: flex;
-    position: fixed;
-    width: 250px;
-    height: 100px;
+    display: inline;
+    height: 10vh;
+    margin-left: 5vw;
     top: 20px;
     left: 5px;
     animation-name: appear;
@@ -18,20 +21,23 @@
 }
 
 .navbar {
+    text-align: right;
     color: white;
     font-size: 20pt;
     padding: 3px;
-    position: fixed;
     justify-content: flex-end;
     z-index: 1; /* stack order top */
-    display: flex;
+    display: inline;
+    position: absolute;
     right: 0;
+    left: 100px;
     justify-content: center;
     animation-name: appear;
     animation-duration: 2.5s;
     animation-fill-mode: forwards;
 }
 
+/** to edit fixed position */
 .navbarMobile {
     color: white;
     font-size: 12pt;
@@ -48,8 +54,8 @@
 }
 
 .navbarItem {
-    margin-right: 10%;
-    padding-right: 3%;
+    display: inline;
+    margin-right: 7%;
     margin-top: 15px;
     padding-top: 10px;
     letter-spacing: 1px;
@@ -139,7 +145,6 @@
 	-webkit-transition: all ease 0.8s;
 	-moz-transition: all ease 0.8s;
 	transition: all ease 0.8s;
-    padding-right: 20vw;
 }
 
 .navbarMobileItem#socialsLinkTop {
@@ -158,7 +163,3 @@
     cursor: pointer;
 }
 
-.musicPageContent {
-    margin-top: 200px;
-    text-align: center;
-}
