music page frontend update

--- a/src/fonts.css
+++ b/src/fonts.css
@@ -6,3 +6,9 @@
     letter-spacing: 2px;
     font-size: 35pt;
 }
+
+.colTitle {
+    font-family: 'Tangerine';
+    letter-spacing: 2px;
+    font-size: 30pt;
+}
