--- a/src/App.css
+++ b/src/App.css
@@ -276,6 +276,29 @@ transition: all ease 0.8s;
   position: relative;
   margin-top: max(25vh, 150px);
   text-align: center;
+  padding-bottom: 25%;
+}
+
+.colContainer {
+  margin-top: max(15vh, 170px);
+}
+
+.songTitle {
+  list-style-position: inside;
+  margin-left: -60px;
+}
+
+.indivTitle {
+  line-height: 1.8;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+a:hover {
+  text-decoration: underline;
 }
 
 
